--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,16 @@ fastapi-cache = "^0.1.0"
 fastapi-cache2 = "^0.2.1"
 asyncpg = "^0.28.0"
 passlib = "^1.7.4"
+loguru = "^0.7.2"
+aiohttp = "^3.8.6"
+aiofiles = "^23.2.1"
+pandas = "2.1.0"
+celery = "^5.3.4"
+flower = "^2.0.1"
+gunicorn = "^21.2.0"
+pytest-asyncio = "^0.21.1"
+sqladmin = "^0.15.2"
+xlsxwriter = "^3.1.8"
 
 
 [build-system]
