--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ gunicorn = "^21.2.0"
 pytest-asyncio = "^0.21.1"
 sqladmin = "^0.15.2"
 xlsxwriter = "^3.1.8"
+alembic = "^1.12.0"
 
 
 [build-system]
