--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ packages = [{include = "fastapi_server_prj"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = {extras = ["all"], version = "^0.103.2"}
-pyright = "^1.1.329"
 python-multipart = "^0.0.6"
 python-jose = "^3.3.0"
 sqlalchemy = "^2.0.21"
@@ -24,11 +23,16 @@ pandas = "2.1.0"
 celery = "^5.3.4"
 flower = "^2.0.1"
 gunicorn = "^21.2.0"
-pytest-asyncio = "^0.21.1"
 sqladmin = "^0.15.2"
 xlsxwriter = "^3.1.8"
 alembic = "^1.12.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pyright = "^1.1.329"
+icecream = "^2.1.3"
+pytest-asyncio = "^0.21.1"
+pytest-pudb = "^0.7.0"
 
 [build-system]
 requires = ["poetry-core"]
