--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ flower = "^2.0.1"
 pandas = "2.1.0"
 xlsxwriter = "^3.1.8"
 openpyxl = "^3.1.2"
+redis = "^5.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
