--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ pandas = "2.1.0"
 xlsxwriter = "^3.1.8"
 openpyxl = "^3.1.2"
 redis = "^5.0.1"
+asgiref = "^3.7.2"
+celery-pool-asyncio = "^0.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -35,6 +37,7 @@ pyright = "^1.1.329"
 icecream = "^2.1.3"
 pytest-asyncio = "^0.21.1"
 pytest-pudb = "^0.7.0"
+pyclean = "^2.7.5"
 
 [build-system]
 requires = ["poetry-core"]
