--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ openpyxl = "^3.1.2"
 redis = "^5.0.1"
 asgiref = "^3.7.2"
 celery-pool-asyncio = "^0.2.0"
+scrapy = "^2.11.0"
 
 
 [tool.poetry.group.dev.dependencies]
