--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 # sudo openssl req -x509 -nodes -days 365 -newkey rsa:4096 -keyout /etc/nginx/ssl/nginx.key -out /etc/nginx/ssl/nginx.crt
 
-user nobody;
+user nobody nogroup;
 worker_processes 1;
 
 error_log /var/log/nginx/error.log warn;
