fix bug with error value in rr

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,9 @@ events {
 }
 
 http {
+    include mime.types;
+    sendfile on;
+
     server {
         listen 443 ssl;
         ssl_certificate /tmp/ssl/nginx.crt;
