fix rr refresh and max-height of item in rr

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 # sudo openssl req -x509 -nodes -days 365 -newkey rsa:4096 -keyout /etc/nginx/ssl/nginx.key -out /etc/nginx/ssl/nginx.crt
 
-user nobody nogroup;
+user nobody; # nogroup; # on ubuntu
 worker_processes 1;
 
 error_log /var/log/nginx/error.log warn;
@@ -11,13 +11,10 @@ events {
 }
 
 http {
-    include mime.types;
-    sendfile on;
-
     server {
         listen 443 ssl;
-        ssl_certificate /tmp/ssl/nginx.crt;
-        ssl_certificate_key /tmp/ssl/nginx.key;
+        ssl_certificate     /etc/nginx/ssl/nginx.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
         location / {
             proxy_pass http://localhost:8000/;
