add nginx settings for work in local only

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,3 +26,25 @@ http {
         return 301 https://$host$request_uri;
     }
 }
+# http {
+#     include mime.types;
+#     sendfile on;
+#     server {
+#         listen 443 ssl;
+#         ssl_certificate /etc/nginx/ssl/nginx.crt;
+#         ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
+#         location / {
+#             # allow anyone in 192.168.1.0/24
+#             allow   192.168.1.0/24;
+#             # drop rest of the world
+#             deny    all;
+#             proxy_pass http://localhost:8000/;
+#         }
+#     }
+#     server {
+#         listen 80 default_server;
+#         server_name _;
+#         return 301 https://$host$request_uri;
+#     }
+# }
