--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "*"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "3.11.9"
 fastapi = {extras = ["all"], version = "^0.103.2"}
 fastapi-cache = "^0.1.0"
 fastapi-cache2 = "^0.2.1"
@@ -25,6 +25,7 @@ aiofiles = "^23.2.1"
 celery = "^5.3.4"
 flower = "^2.0.1"
 pandas = "2.1.0"
+numpy = "<2"
 xlsxwriter = "^3.1.8"
 openpyxl = "^3.1.2"
 redis = "^5.0.1"
